# open-deerflow

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
article/: open-deerflow.html
src/open_deerflow/: __init__.py  config.py  graph.py  main.py  prompts.py  skills.py  state.py
src/open_deerflow/agents/: __init__.py  coder.py  coordinator.py  human_feedback.py  planner.py  reporter.py  research_team.py  researcher.py
src/open_deerflow/skills/: planning.md  report_writing.md
src/open_deerflow/tools/: __init__.py  crawl_server.py  sandbox_server.py  search_server.py
