[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-deerflow"
version = "0.1.0"
description = "An open-source rewrite of ByteDance's DeerFlow SuperAgent (LangGraph + Ollama + MCP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "mcp>=1.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "ddgs>=6.0.0",
    "pydantic>=2.7.0",
]

[project.scripts]
open-deerflow = "open_deerflow.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_deerflow = ["skills/*.md"]
